<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_robot_manager</name>
  <version>0.0.1</version>
  <description>Robot Manager for Universal Robots</description>
  <maintainer email="alexander@minor.pw">Alexander Minor</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>robot_manager_interfaces</depend>

  <export>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <build_type>ament_cmake</build_type>
  </export>
</package>
